# homeassistant-gtfs-realtime

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements.test.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feed-request-template.md
.github/workflows/: feed_compatibility.yaml  hacs.yaml  hassfest.yaml  test.yaml  validate.yaml
custom_components/: __init__.py
custom_components/gtfs_realtime/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  feeds.json  manifest.json  sensor.py
custom_components/gtfs_realtime/feeds/: __init__.py  __main__.py  nyc.py
custom_components/gtfs_realtime/translations/: en.json  strings.json
example/: configuration.yaml  frontend.yaml  nyct_configuration.yaml
hooks/: check_feed_compatibility.py  check_version.py  hassfest.sh  runtests.sh
resources/: feeds.json
resources/NYCT_Bullets/: CITATION.cff
template/: .python-container.yml
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_feeds_nyc_subway.py  test_init.py  test_number.py  test_sensor.py
tests/fixtures/: config_entry_v1_full.json  config_entry_v2_full.json  config_entry_v2_nodialout.json
tests/snapshots/: test_button.ambr  test_diagnostics.ambr  test_sensor.ambr
