[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeassistant-gtfs-realtime"
version = "0.2.7"
description = "HomeAssistant custom integration for GTFS Realtime data."
authors = [{ name= "Benjamin Pearce", email = "gtfs@bcpearce.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "gtfs-station-stop==0.9.2",
    "pytest-homeassistant-custom-component>=0.13.252",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "pre-commit>=4.2.0",
    "pytest-homeassistant-custom-component>=0.13.245",
    "ruff>=0.11.10",
]

[tool.hatch.build.targets.wheel]
packages = ["gtfs_realtime/custom_components"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git"
asyncio_mode = "auto"
addopts = "--strict --cov=custom_components --allow-hosts=127.0.0.1,localhost"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
no_implicit_optional = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true



